--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "react-instantsearch-hooks-web": "^6.29.0",
     "react-intersection-observer": "^9.3.4",
     "tailwindcss-radix": "^2.8.0",
-    "lucide-react": "^latest_version",
+    "lucide-react": "0.438.0",
     "webpack": "^5"
   },
   "devDependencies": {
